Skip preview feature tests against future JRE versions (#4329)
Most preview related tests fail when the JRE version is higher than the
highest compliance level supported by ECJ. Guard such tests from being
run in such cases.

https://github.com/eclipse-jdt/eclipse.jdt.core/pull/4329